Remove more deprecated items